--- a/css/style.css
+++ b/css/style.css
@@ -97,7 +97,7 @@ body {
     display: block;
     width: 50px;
     height: 50px;
-    background-image: url(/img/icon-view.svg);
+    background-image: url(../img/icon-view.svg);
     background-repeat: no-repeat;
     background-position: center;
     position: relative;
